Première avancée du code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Reservia</title>
 </head>
 <body>
-    <h1>Un super titre en rouge 2</h1>
+    <!--Header-->
+    <header class="header">
+        <img class="headerimg" src="images/Reservia@3x">
+        <nav class="headernav>"></nav> 
+            <a class="haedaernavlink">Hébrgement</a>
+            <a class="headernavlink">Activités</a>
+        <a class="headersignup">S'inscrire</a>
+    </header>
+    <!--Header-->
     
 </body>
 </html>
