--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
         <a class="headersignup">S'inscrire</a>
     </header>
     <!--Header-->
+    <!--Main-->
+    <main class="main">
+        <!--Search-->
+        <section class="search">
+            <header class="searchheader">
+                <h1 class="searchheadertitle">Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p class="searchheadersubtitle">En plein centre ville ou en pleine nature</p>
+            </header>
+            <form class="searchform">
+                <span class="searchformicon">
+                    <i class=""></i>
+                </span>
+            
+
+
+
+        </section>
+        <!--Search-->
+    </main>
     
 </body>
 </html>
